--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -20,6 +20,7 @@
 }
 .MainItem img, .MainItem_mobile img{
     max-width: 400;
+    width: 100%;
 }
 .MainItem .ItemDesc, .MainItem_mobile .ItemDesc{
     font-size: 1.2rem;
