--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -14,7 +14,7 @@
 }
 .CardItem img{
     width: 100%;
-    max-height: 177;
+    min-height: 177;
 }
 .CardItem_mobile img{
     margin-right: 10px;
