--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -28,7 +28,7 @@
     margin-top: auto;
     display: flex;
     flex-direction: row; 
-    align-items: baseline;
+    align-items: end;
     justify-content: space-between;
 }
 .CardItem .CardInfoItem{
