mobile badge price

--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -327,3 +327,9 @@ body{
 .scrollCat > a:last-child > span{
     margin-right: 10;
 }
+.MuiBadge-colorPrimary{
+    background-color: #BB0025!important;
+}
+.MuiBadge-anchorOriginTopRightRectangle{
+    right: -10px!important;
+}
