--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -326,3 +326,8 @@ body{
 .MuiBadge-anchorOriginTopRightRectangle{
     right: -10px!important;
 }
+.thisCity{
+    color: #000;
+    font-size: 1.2rem;
+    font-family: ubuntu !important;
+}
