--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -3,12 +3,12 @@
 }
 .Actii h1{
     font-size: 2rem;
-    font-family: futuris!important;
+    font-family: Futuris Bold!important;
     text-align: center;
 }
 .modalActii h6{
     text-align: center;
-    font-family: futuris!important;
+    font-family: Futuris Bold!important;
     font-size: 1.6rem;
 }
 .modalActiiContent{
