--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -6,11 +6,11 @@
 }
 .Contact > div > h1{
     font-size: 2rem;
-    font-family: futuris!important;
+    font-family: Futuris Bold!important;
 }
 .Contact h2{
     font-size: 1.3rem;
-    font-family: futuris!important;
+    font-family: Futuris Bold!important;
 }
 .Contact span{
     font-family: ubuntu!important;
