--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -16,7 +16,7 @@
 }
 .MainItem > div > h1, .MainItem_mobile h1{
     font-size: 2rem;
-    font-family: futuris!important;
+    font-family: Futuris Bold!important;
 }
 .MainItem img, .MainItem_mobile img{
     max-width: 400;
