--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -2,8 +2,8 @@
 
 @font-face {
 	font-family: Futuris Bold; /* Гарнитура шрифта */
-	src: url('/src/assets/fonts/FTX85.otf'); /* Для IE5-8 */
-	src: local(FTX85), url('/src/assets/fonts/FTX85.otf'); /* Для остальных браузеров */
+	src: url('/src/assets/fonts/FuturaFuturisC-Bold.ttf'); /* Для IE5-8 */
+	src: local(FuturaFuturisC-Bold), url('/src/assets/fonts/FuturaFuturisC-Bold.ttf'); /* Для остальных браузеров */
 }
 @font-face {
 	font-family: ubuntu; /* Гарнитура шрифта */
