--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -15,6 +15,6 @@
     padding-top: 0!important;
 }
 .modalActiiContent span, .modalActiiContent p, .modalActiiContent b{
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
     font-size: 1rem;
 }
