--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -13,7 +13,7 @@
     font-family: Futuris Bold!important;
 }
 .Contact span{
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
     font-size: 0.9rem;
 }
 .Contact > div:not(:first-child):not(:last-child){
@@ -30,7 +30,7 @@
     padding: 0;
 }
 .Accordion .AccordionDesc b, .Accordion .AccordionDesc span{
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
     font-size: 0.8rem;
 }
 #ForMap{
@@ -41,7 +41,7 @@
 .my-hint{
     //height: 100px;
     width: 220px;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
     font-size: 0.9rem;
     display: inline-block;
     position: relative;
