--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -33,23 +33,23 @@
 }
 .CardItem .CardInfoItem{
     font-size: 0.7rem!important;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
 }
 .CardItem_mobile .CardInfoItem{
     font-size: 0.8rem!important;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
 }
 .CardItem .CardNameItem, .CardItem_mobile .CardNameItem{
     font-size: 1.2rem!important;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
 }
 .CardItem .CardInfoWeiItem, .CardItem_mobile .CardInfoWeiItem{
     font-size: 0.8rem!important;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
 }
 .CardItem .CardPriceItem, .CardItem_mobile .CardPriceItem{
     font-size: 1.5rem!important;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
     display: flex;
     align-items: flex-end;
 }
@@ -59,11 +59,11 @@
 .CardItem .CardInCardItem, .CardItem_mobile .CardInCardItem{
     width: 100%;
     text-align: center;
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
     font-size: 0.8rem;
 }
 .CardItem .CardCountItem{
-    font-family: ubuntu!important;
+    font-family: Ubuntu, sans-serif!important;
 }
 
 .CardItem_mobile .CardInfoItem{
