--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -1,8 +1,3 @@
-.MainItems{
-    //margin-bottom: 50px!important;
-    //padding-left: 10%;
-    //padding-right: 10%;
-}
 .CardItem{
     max-width: 345; 
     min-height: 300px;
@@ -67,7 +62,6 @@
 .CardItem .CardCountItem{
     font-family: Ubuntu, sans-serif!important;
 }
-
 .CardItem_mobile .CardInfoItem{
     overflow: hidden;
     text-overflow: ellipsis;
@@ -123,9 +117,9 @@
     background-color: #BB0025!important;
     opacity: 0.5;
 }
-
 .alice-carousel{
     margin-top: 50px!important;
+    height: max-content;
 }
 @media (max-width: 600px){
     .alice-carousel{
@@ -137,5 +131,4 @@
 }
 .MainItems.mainContainer > div{
     max-height: auto;
-    
 }
