--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -48,6 +48,7 @@ body{
     }
     & .catLink{
         text-decoration: none;
+        white-space: nowrap;
     }
     & .sub_header img{
         height: 40px;
@@ -226,14 +227,14 @@ body{
 .InputMask:focus{
     outline: inherit!important;
 }
-.ModalAuth .MuiDialogTitle-root {
+.ModalAuth .MuiDialogTitle-root, .ModalCity .MuiDialogTitle-root {
     text-align: center;
 }
-.ModalAuth .MuiDialogTitle-root h2{
+.ModalAuth .MuiDialogTitle-root h2, .ModalCity .MuiDialogTitle-root h2{
     font-size: 1.8rem;
     font-family: Ubuntu, sans-serif !important;
 }
-.ModalAuth .ModalContent_1_1, .ModalAuth .ModalContent_1_2{
+.ModalAuth .ModalContent_1_1, .ModalAuth .ModalContent_1_2, .ModalCity .ModalContent_1_1{
     display: flex;
     flex-direction: column;
 }
@@ -246,6 +247,20 @@ body{
     font-size: 1.1rem; 
     margin-bottom: 5;
     font-family: Ubuntu, sans-serif !important;
+}
+.ModalCity .ModalLabel{
+    font-size: 1.5rem;
+    font-family: Ubuntu, sans-serif !important;
+    margin: 6px 6px;
+    text-align: center;
+    background-color: #e5e5e5;
+    border-radius: 4px;
+    padding: 5px;
+    cursor: pointer;
+}
+.ModalCity .ModalLabel.active{
+    background-color: #BB0025!important;
+    color: #fff;
 }
 .MuiButtonBase-root {
     color: inherit;
@@ -282,5 +297,14 @@ body{
 .thisCity{
     color: #000;
     font-size: 1.2rem;
+    font-family: Ubuntu, sans-serif !important;
+}
+.CityProfileNav{
+    display: flex;
+    flex-direction: column;
+    margin-right: 15px!important;
+}
+.CityProfileNav > span{
+    font-size: 1em;
     font-family: Ubuntu, sans-serif !important;
 }
