--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -21,6 +21,12 @@ body{
     color: #fff;
     font-size: 2rem;
 }
+.footer{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
 .home{
     display: flex;
     flex-direction: column;
@@ -201,6 +207,23 @@ body{
         margin-left: 8.35%!important;
     }
 }
+
+
+@media (min-width: 1280px) {
+    .footer .mainContainer {
+        margin-left: 8.35% !important; 
+    } 
+}
+
+@media (min-width: 960px) {
+    .footer .mainContainer {
+        margin-left: 8.35% !important; 
+        flex-grow: 0;
+        max-width: 83.333333%;
+        flex-basis: 83.333333%;
+    } 
+}
+
 .socIcons{
     display: flex;
     justify-content: flex-end;
