--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -136,3 +136,17 @@
     color: #000;
     text-decoration: none;
 }
+@media (min-width: 1280px) {
+    .MainItems.mainContainer {
+        margin-left: 8.35% !important; 
+    } 
+}
+
+@media (min-width: 960px) {
+    .MainItems.mainContainer {
+        margin-left: 8.35% !important; 
+        flex-grow: 0;
+        max-width: 83.333333%;
+        flex-basis: 83.333333%;
+    } 
+}
