--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -13,6 +13,12 @@ body{
     margin-top: auto;
     background-color: #BB0025;
 }
+@media (max-width: 700px){
+    footer{
+        padding-bottom: 56px!important;
+        margin-bottom: 20px!important;
+    }
+}
 .footer p{
     font-family: Ubuntu, sans-serif!important;
     color: #fff;
