--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -57,6 +57,7 @@ body{
         font-family: Ubuntu, sans-serif!important;
         cursor: pointer;
         color: #000;
+        text-decoration: none;
     }
     & .catLink{
         text-decoration: none;
@@ -207,7 +208,7 @@ body{
     .mainContainer.MuiGrid-grid-lg-10, .mainContainer.MuiGrid-grid-xs-10 {
         margin-left: 8.35%!important;
     }
-    .mainContainer.MuiGrid-grid-xl-10, .mainContainer.MuiGrid-grid-md-8 {
+    .mainContainer.MuiGrid-grid-md-8 {
         margin-left: 16.66665%!important;
     }
 }
@@ -215,7 +216,7 @@ body{
     .mainContainer.MuiGrid-grid-lg-10, .mainContainer.MuiGrid-grid-xs-10, .mainContainer.MuiGrid-grid-md-10 {
         margin-left: 8.35%!important;
     }
-    .mainContainer.MuiGrid-grid-xl-10, .mainContainer.MuiGrid-grid-md-8 {
+    .mainContainer.MuiGrid-grid-md-8 {
         margin-left: 16.66665%!important;
     }
 }
