top nav font size

--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -141,6 +141,9 @@
     .MainItems.mainContainer {
         margin-left: 8.35% !important; 
     } 
+    .home .cat{
+        font-size: 1.05vw!important;
+    }
 }
 @media (min-width: 960px){
     .MainItems.mainContainer {
